# py_coreDAQ

./: .gitignore  .readthedocs.yaml  API_REDESIGN_PLAN.md  DEVLOG.md  README.md  mkdocs.yml  py_coreDAQ.py  pyproject.toml  responsivity_curves.json
coredaq/: __init__.py
docs/: api-reference.md  capture.md  frames.md  index.md  migration.md  quickstart.md  ranges.md  readings.md  settings.md  state.md  trigger.md  zeroing.md
py_coreDAQ/: __init__.py  _coredaq.py  _device.py  _driver.py  _exceptions.py  _simulator.py  _transport.py
py_coreDAQ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_coredaq_api.py
