[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_coreDAQ"
version = "0.1.0"
description = "Photonics-first Python API for the coreDAQ powermeter and DAQ."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyserial>=3.5",
  "numpy>=1.24",
]

[tool.setuptools]
py-modules = ["py_coreDAQ"]
