[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_coreDAQ"
version = "0.2.0"
description = "Photonics-first Python API for the coreDAQ 4-channel optical power meter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["py_coreDAQ*"]

[tool.setuptools.package-data]
py_coreDAQ = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
